proj1/testing/error/wrongConf.inp
* B Beta I II III AAAA
HELLO